--- a/src/main/resources/templates/homeSortForm.html
+++ b/src/main/resources/templates/homeSortForm.html
@@ -134,7 +134,7 @@
         console.log(text);
         if (text === '정렬선택'){
             const input = document.getElementById("sortType");
-            input.value = "null";
+            input.value = "sortSelect";
         } else if(text === '가격순'){
             const input = document.getElementById("sortType");
             input.value = "sortPrice";
