--- a/src/main/resources/templates/musicList/contentMusicListForm.html
+++ b/src/main/resources/templates/musicList/contentMusicListForm.html
@@ -441,15 +441,11 @@
             }
         }
 
+
+        let tempCommentId;
         function reply(obj, divSize) {
             const commentEditDiv = document.getElementById('commentEdit');
             commentEditDiv.style.display = 'none';
-
-            console.log("pppp" + $(obj).parent().parent().next().next().next().text());
-            const length = $(obj).parent().parent().next().next().next().text().length;
-            console.log("iiiii" + length);
-
-            console.log(divSize);
             const memberCash = [[${memberCash}]];
             if (memberCash == -1) {
                 if (confirm("답글달려면로그인하시겠습니까")) {
@@ -459,36 +455,30 @@
                     return;
                 }
             }
-            //대댓글 div
-            const replyDiv = document.getElementById('reply');
-            // 답글버튼 누를시 현재 누른 위치 밑에 대댓글Div 가 붙어있는지 체크후 없다면
-            // 제일 첫번째 우선순위로 대댓글Div display none 상태로 바꾼다
-            // 왜냐하면 1번째 댓글에 답글버튼 클릭하면 바로 밑에 대댓글Div 붙이고 display block 상태인데
-            // 2번째 댓글에 답글버튼 클릭하면 1번째 댓글 밑에 대댓글Div display none 상태로 미리 바꿔놔야
-            // 1번댓글의 대댓글Div 이동시켜 2번째댓글Div 바로아래로 이동시킨후 block 상태로 변경가능하기때문
-            if ($(obj).parent().parent().next().next().next().text().length === 0) {
-                console.log("aaa");
-                replyDiv.style.display = 'none';
-            } else {
-                console.log("asd");
-            }
 
-            //댓글 div 안에 답글 버튼 클릭시 보여주거나 숨김
-            if (replyDiv.style.display === 'none') {
-                console.log("ccc");
-                //댓글 클릭시 바로 밑으로 이동시킴
-                $(obj).parent().parent().parent().append(replyDiv);
-                replyDiv.style.display = 'block';
-            } else {
-                console.log("ddd");
+            const replyDiv = document.getElementById('reply');
+            // 답글 Div 바로아래 이동시킴
+            $(obj).parent().parent().parent().append(replyDiv);
+            const commentId = $(obj).next().text();
+            console.log("commentId="+commentId)
+
+            if (replyDiv.style.display === 'none'){  // 답글 Div 숨김상태에서 화면에 보여줌
+                replyDiv.style.display = 'block';  // div block 상태에서 다른 댓글 답글버튼누루면 block 상태 유지하기 위한 임시 저장
+                tempCommentId = commentId;
+                console.log("tempID="+tempCommentId)
+            } else if (tempCommentId == commentId){  // 답글버튼 껏다 켯다 하는기능
+                console.log("조건T")
                 replyDiv.style.display = 'none';
+            } else if (replyDiv.style.display === 'block'){
+                tempCommentId = commentId; //껏다켯다 하기위해 현제위치로 설정.
+                console.log("여여여기기"+tempCommentId)
             }
 
             console.log("pppp" + $(obj).parent().parent().next().next().next().text());
-
-
-            const commentId = $(obj).next().text();
-            console.log("zz" + commentId);
+            const length = $(obj).parent().parent().next().next().next().text().length;
+            console.log("iiiii" + length);
+            console.log(divSize);
+            console.log("pppp" + $(obj).parent().parent().next().next().next().text());
 
             const form = document.getElementById('replyForm');
             const input = document.createElement('input');
@@ -498,35 +488,34 @@
             form.append(input);
         }
 
+
+        let tempCommentId1;
         function commentEdit(obj, divSize) {
             const replyDiv = document.getElementById('reply');
             replyDiv.style.display = 'none';
+            const commentEditDiv = document.getElementById('commentEdit');
+            // Edit Div 창 바로아래로 이동시킴
+            $(obj).parent().parent().parent().append(commentEditDiv);
+            const commentId = $(obj).next().text();
+            console.log("commentId1="+commentId)
+
+            if (commentEditDiv.style.display === 'none'){  // 답글 Div 숨김상태에서 화면에 보여줌
+                commentEditDiv.style.display = 'block';
+
+                tempCommentId1 = commentId;  // div block 상태에서 다른 댓글 답글버튼누루면 block 상태 유지하기 위한 임시 저장
+                console.log("tempID="+tempCommentId1)
+            } else if (tempCommentId1 == commentId){  // 답글버튼 껏다 켯다 하는기능
+                console.log("조건T")
+                commentEditDiv.style.display = 'none';
+            } else if (commentEditDiv.style.display === 'block'){
+                tempCommentId1 = commentId; //껏다켯다 하기위해 현제위치로 설정.
+                console.log("여여여기기"+tempCommentId1)
+            }
 
             const length = $(obj).parent().parent().next().next().text().length;
             console.log("iiiii" + length);
             console.log(divSize);
-
-            const commentEditDiv = document.getElementById('commentEdit');
-
-            if ($(obj).parent().parent().next().next().text().length === 0) {
-                console.log("aaa");
-                commentEditDiv.style.display = 'none';
-            } else {
-                console.log("asd");
-            }
-
-            if (commentEditDiv.style.display === 'none') {
-                $(obj).parent().parent().parent().append(commentEditDiv);
-                console.log("ccc");
-                commentEditDiv.style.display = 'block';
-            } else {
-                console.log("ddd");
-                commentEditDiv.style.display = 'none';
-            }
-
             console.log("pppp" + $(obj).parent().parent().next().next().text());
-            const commentId = $(obj).next().next().text();
-            console.log("xx" + commentId);
 
             const form = document.getElementById('commentEditForm');
             const input = document.createElement('input');
