--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -76,6 +76,12 @@
                 <a href="/signup" style="width: 200px" class="btn btn-primary">회원가입</a>
             </div>
 
+            <div style="margin-top: 5px">
+                <a style="width: 200px; background-color: limegreen; border: none;" class="btn btn-primary"
+                   th:href="@{https://nid.naver.com/oauth2.0/authorize(client_id=${naverClientId},
+                    redirect_uri=${naverRedirectUri}, response_type='code', state=${state})}">네이버 로그인 </a>
+            </div>
+
         </form>
     </main>
     </body>
