--- a/src/main/resources/templates/musicList/buyMusicListForm.html
+++ b/src/main/resources/templates/musicList/buyMusicListForm.html
@@ -61,7 +61,7 @@
     </table>
 </div>
 
-<div th:if="${loginId != null}" class="container">
+<div class="container">
     <ul class="pagination justify-content-center" style="margin-top: 20px">
 
         <li class="page-item" th:classappend="${start==0} ? 'disabled'">
