--- a/src/main/resources/templates/musicList/sellMusicListForm.html
+++ b/src/main/resources/templates/musicList/sellMusicListForm.html
@@ -65,7 +65,7 @@
 </div>
 
 
-<div th:if="${loginId != null}" class="container">
+<div class="container">
     <ul class="pagination justify-content-center" style="margin-top: 20px">
 
         <li class="page-item" th:classappend="${start==0} ? 'disabled'">
