네이버 로그인 구현

--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -77,9 +77,7 @@
             </div>
 
             <div style="margin-top: 5px">
-                <a style="width: 200px; background-color: limegreen; border: none;" class="btn btn-primary"
-                   th:href="@{https://nid.naver.com/oauth2.0/authorize(client_id=${naverClientId},
-                    redirect_uri=${naverRedirectUri}, response_type='code', state=${state})}">네이버 로그인 </a>
+                <a href="naverLogin" style="width: 200px; background-color: limegreen; border: none;" class="btn btn-primary">네이버 로그인 </a>
             </div>
 
         </form>
